# rust-lang

./: .drone.yml  .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
components/ch04-02-references-and-borrowing/src/: lib.rs
components/ch04-03-slices/src/: lib.rs
components/ch05-01-defining-structs/src/: lib.rs
design-pattern/: Cargo.toml  README.md
design-pattern/src/: lib.rs
